fix: fixed layout spacing for list in difficulties

--- a/src/app/publications/difficultes/difficulties.module.scss
+++ b/src/app/publications/difficultes/difficulties.module.scss
@@ -6,20 +6,27 @@
 	ol {
 		display: grid;
 		gap: 1.5rem;
+
+		padding: 0;
+		list-style-position: inside;
 	}
 
 	ol > li {
 		font-weight: 700;
-		display: grid;
-		gap: 0.5rem;
 
 		ul {
 			font-weight: 400;
+			margin-block-start: 0.5rem;
+
 			display: grid;
 			gap: 0.75rem;
 
+			padding: 0;
+			padding-inline-start: 1.5rem;
+
 			li {
 				list-style-type: disc;
+				list-style-position: outside;
 			}
 		}
 	}
